--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,24 +29,45 @@
             android:layout_height="wrap_content"
             android:hint="Código"
             android:inputType="textPersonName" />
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/label_descripcion"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Descripción:" />
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/txt_descripcion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
-        android:ems="10"
-        android:hint="Descripcion"
-        android:inputType="textPersonName" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/label_descripcion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Descripción:" />
+
+            <EditText
+                android:id="@+id/txt_descripcion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:ems="10"
+                android:hint="Descripcion"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_enlistar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:text="Enlistar" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_agregar"
@@ -67,10 +88,10 @@
         android:text="Modificar" />
 
     <Button
-        android:id="@+id/btn_enlistar"
+        android:id="@+id/btn_adjuntar_foto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enlistar" />
+        android:text="Adjuntar Foto" />
 
     <ListView
         android:id="@+id/listaProductos"
